collapse style fix

--- a/kasa/src/components/accomodation/accomodation.scss
+++ b/kasa/src/components/accomodation/accomodation.scss
@@ -163,7 +163,7 @@ h1, h2 {
 
 }
 
-.accoCollapse{
+#accoCollapse{
   width: 100%;
   max-width: 582px;
   height: 50%;
