--- a/kasa/src/components/collapse/collapse.scss
+++ b/kasa/src/components/collapse/collapse.scss
@@ -4,7 +4,6 @@
   border-radius: 10px;
   margin: 10px 0;
   padding: 0;
-  max-width: 1023px;
   font-size: 18px;
 
   &_title {
