--- a/kasa/src/pages/about/about.scss
+++ b/kasa/src/pages/about/about.scss
@@ -21,6 +21,11 @@
 
 .about_main_collapse{
     margin-bottom: 30px;
+
+    .collapse{
+        max-width: 1023px;
+        width: 100% ;
+    }
 }
 
 
