--- a/kasa/src/pages/accomodation/accomodation.scss
+++ b/kasa/src/pages/accomodation/accomodation.scss
@@ -13,9 +13,10 @@
 
 
 
-.accoCollapse{
+.collapse{
     max-width: 582px;
     max-height: none;
+    width: 50%;
 }
 
 @media (max-width: 375px) {
